objects/vlocity_ins__QuoteLineItemGroupClass__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__GroupClassId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Group Class</label>
        <referenceTo>vlocity_ins__GroupClass__c</referenceTo>
        <relationshipLabel>Quote Line Item Group Class</relationshipLabel>
        <relationshipName>QuoteLineItemGroupClasses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__QuoteId__c</fullName>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quote Line Item Group Classes</relationshipLabel>
        <relationshipName>QuoteLineItemGroupClasses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__QuoteLineItemId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Quote Line Item</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Quote Line Item Group Class</relationshipLabel>
        <relationshipName>QuoteLineItemGroupClasses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Quote Line Item Group Class</label>
    <nameField>
        <label>Quote Line Item Group Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Line Item Group Classes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>